增强ai对话功能和订阅管理功能